--- a/UINavigationController_PushPop/UINavigationController_PushPop/Second.storyboard
+++ b/UINavigationController_PushPop/UINavigationController_PushPop/Second.storyboard
@@ -16,8 +16,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ghd-Wi-ldg">
-                                <rect key="frame" x="164.5" y="318.5" width="46" height="30"/>
-                                <state key="normal" title="ぽっぷ"/>
+                                <rect key="frame" x="172.5" y="318.5" width="30" height="30"/>
+                                <state key="normal" title="POP"/>
                                 <connections>
                                     <action selector="popButton:" destination="z0W-5n-waM" eventType="touchUpInside" id="U7J-LX-jz8"/>
                                 </connections>
