--- a/UITableView_NoSection/UITableView_NoSection/Base.lproj/Main.storyboard
+++ b/UITableView_NoSection/UITableView_NoSection/Base.lproj/Main.storyboard
@@ -26,11 +26,19 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RIb-D6-Xna">
-                                                    <rect key="frame" x="15" y="12" width="56" height="56"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RIb-D6-Xna">
+                                                    <rect key="frame" x="18" y="14" width="56" height="52"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="56" id="JUd-61-3st"/>
+                                                        <constraint firstAttribute="width" constant="56" id="evE-pz-gMT"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="RIb-D6-Xna" firstAttribute="top" secondItem="SJZ-Bs-hcc" secondAttribute="topMargin" constant="3" id="0SL-jQ-Wcf"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="RIb-D6-Xna" secondAttribute="bottom" constant="3" id="CW5-fz-hqH"/>
+                                                <constraint firstItem="RIb-D6-Xna" firstAttribute="leading" secondItem="SJZ-Bs-hcc" secondAttribute="leadingMargin" constant="3" id="G8A-Z0-VFK"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -49,6 +57,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="commentTableView" destination="RSr-Hq-inw" id="osH-2u-EuZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
