--- a/UITableView_Section/UITableView_Section/Base.lproj/Main.storyboard
+++ b/UITableView_Section/UITableView_Section/Base.lproj/Main.storyboard
@@ -26,11 +26,19 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nw1-FZ-dXA">
-                                                    <rect key="frame" x="11" y="9" width="50" height="50"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nw1-FZ-dXA">
+                                                    <rect key="frame" x="10" y="10" width="80" height="49"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="80" id="3WR-hV-uIN"/>
+                                                        <constraint firstAttribute="height" constant="80" id="b1L-sc-bBU"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Nw1-FZ-dXA" firstAttribute="leading" secondItem="sNv-i0-k19" secondAttribute="leading" constant="10" id="8zI-st-dDY"/>
+                                                <constraint firstItem="Nw1-FZ-dXA" firstAttribute="top" secondItem="sNv-i0-k19" secondAttribute="top" constant="10" id="YG6-VR-7ae"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Nw1-FZ-dXA" secondAttribute="bottom" constant="10" id="qGt-X5-UX9"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
