userDefaults.synchronize()を追加

--- a/UserDefault/UserDefault/Main.storyboard
+++ b/UserDefault/UserDefault/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,13 +10,13 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="stv50_mrmt_26" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UserDefault" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fyW-Gf-WZZ">
-                                <rect key="frame" x="149" y="416" width="77" height="11"/>
+                                <rect key="frame" x="149" y="398.5" width="77" height="28.5"/>
                                 <state key="normal" title="削除ボタン"/>
                                 <connections>
                                     <action selector="deleteButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fuw-DP-M0Q"/>
@@ -25,17 +24,16 @@
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kaa-rI-tmj">
                                 <rect key="frame" x="166.5" y="230" width="42" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="0tB-bK-Ygh"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O1d-EV-LZl">
-                                <rect key="frame" x="137.5" y="299" width="100" height="69"/>
+                                <rect key="frame" x="137.5" y="316.5" width="100" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="3gJ-tY-uBR"/>
+                                    <constraint firstAttribute="height" constant="34" id="TMb-eu-4VO"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="xf4-K6-t1Q"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -44,13 +42,16 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="O1d-EV-LZl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6qj-h9-nZZ"/>
-                            <constraint firstItem="Kaa-rI-tmj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="230" id="BX1-gX-RGQ"/>
+                            <constraint firstItem="O1d-EV-LZl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FfZ-dU-NNh"/>
                             <constraint firstItem="fyW-Gf-WZZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Gia-Wy-OR4"/>
-                            <constraint firstItem="O1d-EV-LZl" firstAttribute="top" secondItem="Kaa-rI-tmj" secondAttribute="bottom" constant="48" id="GmY-yl-a2T"/>
                             <constraint firstItem="fyW-Gf-WZZ" firstAttribute="top" secondItem="O1d-EV-LZl" secondAttribute="bottom" constant="48" id="W9T-Hx-Jqu"/>
+                            <constraint firstItem="Kaa-rI-tmj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WCs-NP-dIv"/>
                             <constraint firstItem="O1d-EV-LZl" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Xzy-k8-oa9"/>
+                            <constraint firstItem="Kaa-rI-tmj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="230" id="bta-Gh-rU2"/>
+                            <constraint firstItem="fyW-Gf-WZZ" firstAttribute="top" secondItem="O1d-EV-LZl" secondAttribute="bottom" constant="48" id="lSJ-Ka-eYV"/>
+                            <constraint firstItem="fyW-Gf-WZZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pi7-9q-l1e"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fyW-Gf-WZZ" secondAttribute="bottom" constant="240" id="qwS-7e-AgB"/>
-                            <constraint firstItem="Kaa-rI-tmj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wao-yL-iUe"/>
+                            <constraint firstItem="O1d-EV-LZl" firstAttribute="top" secondItem="Kaa-rI-tmj" secondAttribute="bottom" constant="65.5" id="rca-eo-y0b"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
